force-app/main/default/objects/blng__UsageSummary__c/fields/blng__AppliedUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>blng__AppliedUnitPrice__c</fullName>
    <label>Applied Unit Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>