force-app/main/default/objects/blng__UsageSummary__c/fields/blng__BilledQuantity__c.field-meta.xml
<CustomField>
    <fullName>blng__BilledQuantity__c</fullName>
    <label>Billed Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>