force-app/main/default/objects/blng__UsageSummary__c/fields/blng__IncludedUnbilledUsage__c.field-meta.xml
<CustomField>
    <fullName>blng__IncludedUnbilledUsage__c</fullName>
    <label>Included Unbilled Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>