force-app/main/default/objects/blng__UsageSummary__c/fields/blng__IncludedUsageExhausted__c.field-meta.xml
<CustomField>
    <fullName>blng__IncludedUsageExhausted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included Usage Exhausted</label>
    <type>Checkbox</type>
</CustomField>