force-app/main/default/objects/blng__UsageSummary__c/fields/blng__MatchingAttribute__c.field-meta.xml
<CustomField>
    <fullName>blng__MatchingAttribute__c</fullName>
    <label>Matching Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>