force-app/main/default/objects/blng__UsageSummary__c/fields/blng__MatchingId__c.field-meta.xml
<CustomField>
    <fullName>blng__MatchingId__c</fullName>
    <externalId>true</externalId>
    <label>Matching ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>