force-app/main/default/objects/blng__UsageSummary__c/fields/blng__NextBillingDate__c.field-meta.xml
<CustomField>
    <fullName>blng__NextBillingDate__c</fullName>
    <label>Next Billing Date</label>
    <type>Date</type>
</CustomField>