force-app/main/default/objects/blng__UsageSummary__c/fields/blng__Notes__c.field-meta.xml
<CustomField>
    <fullName>blng__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>