force-app/main/default/objects/blng__UsageSummary__c/fields/blng__Order__c.field-meta.xml
<CustomField>
    <fullName>blng__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>OrderUsageMediations</relationshipName>
    <type>Lookup</type>
</CustomField>