force-app/main/default/objects/blng__UsageSummary__c/fields/blng__OrderItemConsumptionSchedule__c.field-meta.xml
<CustomField>
    <fullName>blng__OrderItemConsumptionSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item Consumption Schedule</label>
    <referenceTo>SBQQ__OrderItemConsumptionSchedule__c</referenceTo>
    <relationshipLabel>Usage Summary</relationshipLabel>
    <relationshipName>UsageSummariesOICS</relationshipName>
    <type>Lookup</type>
</CustomField>