force-app/main/default/objects/blng__UsageSummary__c/fields/blng__OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>blng__OrderProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Usage Summaries</relationshipLabel>
    <relationshipName>OrderProductUsageMediations</relationshipName>
    <type>Lookup</type>
</CustomField>