force-app/main/default/objects/blng__UsageSummary__c/fields/blng__OverrideSummaryEndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__OverrideSummaryEndDate__c</fullName>
    <label>Override Summary End Date</label>
    <type>Date</type>
</CustomField>