force-app/main/default/objects/blng__UsageSummary__c/fields/blng__OverrideSummaryStartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__OverrideSummaryStartDate__c</fullName>
    <label>Override Summary Start Date</label>
    <type>Date</type>
</CustomField>