force-app/main/default/objects/blng__UsageSummary__c/fields/blng__PreratedAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__PreratedAmount__c</fullName>
    <label>Prerated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>