force-app/main/default/objects/blng__UsageSummary__c/fields/blng__SummaryEndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__SummaryEndDate__c</fullName>
    <label>Summary End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>