force-app/main/default/objects/blng__UsageSummary__c/fields/blng__TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalQuantity__c</fullName>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>