force-app/main/default/objects/blng__UsageSummary__c/fields/blng__TotalRevenue__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalRevenue__c</fullName>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>