force-app/main/default/objects/blng__UsageSummary__c/fields/blng__UnbilledRevenue__c.field-meta.xml
<CustomField>
    <fullName>blng__UnbilledRevenue__c</fullName>
    <label>Unbilled Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>