force-app/main/default/objects/blng__UsageSummary__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Order__c</columns>
    <columns>blng__OrderProduct__c</columns>
    <columns>blng__Status__c</columns>
    <columns>blng__UnbilledQuantity__c</columns>
    <columns>blng__BilledQuantity__c</columns>
    <columns>blng__TotalQuantity__c</columns>
    <columns>blng__UnitPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>